# slack-bot-daily-summary

./: .coverage  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  Dockerfile  README.MD  app_manifest.json  books.json  coverage.xml  docker-compose.yml  endpoint.py  jobs.json  pyproject.toml  pytest.ini  sonar-project.properties  test.json
.github/workflows/: ci.yml  common.yml  pr.yml
src/: ai_helper.py  constant.py  db_helper.py  domain.py  external_helper.py  main.py  schedule_helper.py  slack_helper.py
tests/: test_ai_helper.py  test_db_helper.py  test_domain.py  test_endpoint.py  test_external_helper.py  test_integration.py  test_main.py  test_schedule_helper.py  test_slack_helper.py  test_utils.py
