[project]
name = "slack-bot-daily-summary"
version = "0.1.0"
description = ""
authors = [
    {name = "JohnSmith",email = "me@flavienleblond.com"}
]
readme = "README.md"
requires-python="==3.13.7"
dependencies = [
    "slack-sdk==3.37.0",
    "schedule==1.2.2",
    "openai==2.3.0",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "tinydb==4.8.2",
    "fastapi==0.118.3",
    "uvicorn==0.37.0",
    "python-multipart==0.0.20",
    "pytest-dotenv==0.5.2",
]

[project.optional-dependencies]
dev = [
    "ty==0.0.1a22",
    "ruff==0.14.0",
    "responses==0.25.8",
    "pytest-cov==7.0.0",
    "pytest==8.4.2",
]

[tool.ty.src]
exclude = ["tests/**"]
